--- a/aks/deployment.yaml
+++ b/aks/deployment.yaml
@@ -1,22 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: angular-app-deployment
-  labels:
-    app: sample-app
+  name: angular-aks-deployment
 
 spec:
-  replicas: 3
   selector:
     matchLabels:
-      app: sample-app
+      app: sample-angular-app
+  replicas: 2
   template:
     metadata:
       labels:
-        app: sample-app
+        app: sample-angular-app
     spec:
       containers:
-      - name: angular-app
-        image: nginx:1.14.2
+      - name: angular-aks-sample-app
+        image: amit4498/aks-angular-app
         ports:
-        - containerPort: 80
+        - containerPort: 8080
