--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -6,7 +6,7 @@ jobs:
   Node-build:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Running list for build contents
         run: |
           ls -lart
