--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -12,9 +12,9 @@ jobs:
           ls -lart
           
       - name: Running reusable build action
-        uses: .github/actions/
+        uses: ./.github/actions/
         with:
-          app-dir: "."
+          app-dir: '.'
 
       - name: Running list for build contents
         run: |
