Updated npm ci tp npm i cmd action.yaml

--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -22,7 +22,7 @@ runs:
 
     - name: Install node dependecy
       working-directory: ${{ inputs.app-dir }}
-      run: npm ci
+      run: npm i
       shell: bash
 
     - name: Run test
