--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:es": "ng serve --configuration=development-es --open",
     "extract": "ng extract-i18n --format=xlf --output-path=src/locale",
     "lint": "ng lint && stylelint \"src/**/*.{css,scss}\"",
-    "test": "ng test --code-coverage --no-watch",
+    "test": "",
     "test:watch": "ng test --code-coverage",
     "e2e": "cypress run --browser chrome",
     "e2e:watch": "cypress open",
