Added sonar scan related changes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
-sonar.host.url=http://localhost:9000
-sonar.login=admin
-sonar.password=admin123
+sonar.host.url=SONAR_HOST
+sonar.login=SOAR_TOKEN
 sonar.projectKey=test-app
 sonar.projectName=test-app
 sonar.projectVersion=1.0
