--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -12,7 +12,7 @@ jobs:
           ls -lart
           
       - name: Running reusable build action
-        uses: ./.github/actions/
+        uses: ./.github/actions/node-build/
         with:
           app-dir: '.'
 
