--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -10,4 +10,5 @@ jobs:
     -  uses: actions/checkout@v3
     -  uses: ./.github/actions/sonar/
        with:
-         app-dir: "."
+         app-directory: "."
+       
