--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -11,5 +11,5 @@ jobs:
     -  uses: ./.github/actions/sonar/
        with:
          app-directory: "."
-       secrets: inherit
+       shell: bash
        
