--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -5,8 +5,9 @@ on:
 
 jobs:
   code-ql:
-    uses: ./.github/actions/
-    with:
-       app-directory: "."
-    secrets: inherit
+    runs-on: [ubuntu-latest]
+    - uses: ./.github/actions/sonar/
+      with:
+        app-directory: "."
+
        
