--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -7,6 +7,7 @@ jobs:
   code-ql:
     runs-on: [ubuntu-latest]
     steps:
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/sonar/
       with:
         app-directory: "."
