--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -5,11 +5,9 @@ on:
 
 jobs:
   code-ql:
-    runs-on: [ubuntu-latest]
-    steps:
-    - uses: actions/checkout@v3
-    - uses: ./.github/actions/sonar/
+    uses: ./.github/actions/sonar/action.yaml@develop
       with:
         app-directory: "."
+      secrets: inherit
 
        
