--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -5,9 +5,9 @@ on:
 
 jobs:
   code-ql:
-    uses: ./.github/actions/sonar/action.yaml
-    with:
-      app-directory: "."
-    secrets: inherit
+    uses: ./.github/workflows/sonar.yaml@develop
+      with:
+        app-directory: "."
+      secrets: inherit
 
        
