--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -28,5 +28,5 @@ jobs:
     - name: Run Sonar Scanning
       working-directory:  "${{ inputs.app-directory }}"
       run: npm run sonar
-      sell: bash
+      shell: bash
      
