--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -19,9 +19,8 @@ jobs:
 
     - name: Install sonar
       working-directory:  "${{ inputs.app-directory }}"
-      run: |
-        npm install 
-        npm install sonar-scanner --save-dev
+      run: | 
+        npm install sonar-scanner --save-dev --legacy-peer-deps
         sed -i "s|SONAR_TOKEN|${{ secrets.SONAR_TOKEN }}" sonar-project.properties
         sed -i "s|SONAR_HOST|${{ secrets.SONAR_HOST }}" sonar-project.properties
       shell: bash
